testdata/baselines/reference/compiler/catchClauseRestProperties.errors.txt
catchClauseRestProperties.ts(3,15): error TS2700: Rest types may only be created from object types.


==== catchClauseRestProperties.ts (1 errors) ====
    try {
      // ...
    } catch ({ ...rest }) {
                  ~~~~
!!! error TS2700: Rest types may only be created from object types.
      // ...
    }
    